momentuHMM 1.5.2 2020-10-01
-----------------
NEW FEATURES

* Approximate individual-level random effects estimation for the state transition probabilities based on Burnham & White (2002) can now be implemented via the randomEffects function

CHANGES

* plotPR now uses car::qqPlot for pseudo-residual qq-plots

* the following packages have been moved to 'Suggests' and are now used conditionally: BB, conicfit, dplyr, expm, ggmap, ggplot2, lubridate, magrittr, matrixcalc, moveHMM, raster, and scatterplot3d. If any of these are packages needed, users will be prompted to install.

* suppress 'Unknown or uninitialised column' warning in crawlWrap when obsData is an sf object

* removed initial SANN optimization when using retryFits in crawlWrap

* reduced worker memory pressure in crawlWrap when running in parallel

* deprecated cons and workcons arguments are now defunct; please use workBounds instead

* deprecated verbose argument in fitHMM and MIfitHMM is now defunct; please use nlmPar instead

BUG FIXES

* mixtureProbs function produced an error when initial distribution formula includes covariates

* avoid numerical underflow in mixtureProbs when a mixture probability is zero

* overly restrictive check for time-varying covariates in fitHMM when stationary=TRUE


momentuHMM 1.5.1 2020-03-04
-----------------
CHANGES

* stationary argument in fitHMM and MIfitHMM can now be set to TRUE when there are no time-varying covariates included in formula; in this case the initial distribution is calculated independently for each individual

* in prepData, data streams can now be named 'step' and/or 'angle' when coordNames=NULL

BUG FIXES

* fitHMM and MIfitHMM argument 'retryFits' failed to randomly perturb parameter values in momentuHMM 1.5.0

* 'toState' special formula did not account for non-default values in 'betaRef' argument


momentuHMM 1.5.0 2019-12-17
-----------------
NEW FEATURES
